--- a/service/package.json
+++ b/service/package.json
@@ -24,6 +24,7 @@
     "form-data": "^4.0.0",
     "mailgun.js": "^10.2.1",
     "mongoose": "^8.2.2",
+    "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
