--- a/service/package.json
+++ b/service/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^8.2.2",
     "mongoose-sequence": "^6.0.1",
     "multer": "^1.4.5-lts.1",
+    "net": "^1.0.2",
     "node-fetch": "^3.3.2",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
