--- a/service/package.json
+++ b/service/package.json
@@ -16,7 +16,9 @@
   "author": "Bhargav C N, Reky George",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.7.3",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
     "express": "^4.19.1",
